# Scriber

./: .gitattributes  .gitignore  .mcp.json  .tmp_readme_subtasks.csv  AGENTS.md  AntigravityBugs.md  BUGS.md  CLAUDE.md  CODE_REVIEW.md  LICENSE  OPTIMIZATIONS_IMPLEMENTED.md  PERFORMANCE_ANALYSIS.md  README.md  THIRD_PARTY_NOTICES.md  TRANSCRIPTION_SPEED_IMPROVEMENTS.md  autoresearch.checks.ps1  autoresearch.config.json  autoresearch.ps1  benchmark-lint.ps1  check_imports.py  cleanup_soniox.py  design-qa.md  doctor.ps1  finalize-preview.ps1  frontend.md  improvements.md  latest.structured.jsonl  list_mics.py  next.ps1  onboarding-packet.ps1  performance.md  pipeline.md  pytest.ini  recommend-next.ps1  requirements-base.txt  requirements-build.txt  requirements-local-asr.txt  requirements.txt  settings.json  start.bat  (+4 more)
.claude/: settings.local.json
Frontend/: .gitignore  components.json  package-lock.json  package.json  vite.config.ts
Frontend/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
Frontend/src-tauri/capabilities/: default.json
Frontend/src-tauri/icons/: tray-normal-16.rgba  tray-normal-20.rgba  tray-normal-24.rgba  tray-normal-28.rgba  tray-normal-32.rgba  tray-normal-36.rgba  tray-normal-40.rgba  tray-normal-48.rgba  tray-normal.rgba  tray-recording-16.rgba  tray-recording-20.rgba  tray-recording-24.rgba  tray-recording-28.rgba  tray-recording-32.rgba  tray-recording-36.rgba  tray-recording-40.rgba  tray-recording-48.rgba  tray-recording.rgba  tray-update-16.rgba  tray-update-20.rgba  tray-update-24.rgba  tray-update-28.rgba  tray-update-32.rgba  tray-update-36.rgba  tray-update-40.rgba  tray-update-48.rgba  tray-update.rgba  window-icon.rgba
Frontend/src-tauri/src/: audio_codec.rs  audio_devices.rs  audio_frame_pipe.rs  audio_prepare.rs  audio_sidecar.rs  audio_sidecar_client.rs  export_dialog.rs  lib.rs  main.rs  meeting_aec.rs  native_overlay.rs  outlook_config.rs  redaction.rs  shell_ipc.rs
Frontend/src-tauri/windows/: installer-hooks.nsh
backend_runtime/: __init__.py  contract.py  docstring_prune_probe.py  huggingface_hub_policy.py  installer_youtube_holdout_probe.py  launcher.py  pyinstaller_huggingface_runtime_hook.py  pyinstaller_yt_dlp_runtime_hook.py  yt_dlp_policy.py
docs/: ARCHITECTURE.md  Architecture-Comparison-Scriber-Handy-VoiceTypr.md  AssemblyAI-Universal-3-Pro-Async-Implementation.md  Bug-Review-2026-06-08.md  FFmpeg-Footprint-Strategy.md  FRONTEND_PERFORMANCE_DEEP_ANALYSIS.md  Hybrid-Architecture-Baseline.md  Hybrid-Architecture-Goal.md  Hybrid-Architecture-Validation.md  Installer-Size-and-Build-Speed-Optimization.md  Legacy-Desktop-Fallback-Decision.md  Mic-Performance-Enhancement.md  Mic-Volume-0-Mitigation-Proposals.md  PERFORMANCE_AND_PACKAGING.md  PIPELINE_ARCHITECTURE.md  PRD.md  Performance-Optimization-Proposals.md  Performance-Review-2026-02-06.md  ROADMAP_AND_KNOWN_ISSUES.md  Startup-Latency-Analysis.md  TESTING_AND_RELEASE.md  UI-UX-Improvement-Proposals.md  Windows-Installer-und-Auto-Update-Strategie.md  feature_user_story_tracker.xlsx  readme-analysis-backend.md  readme-analysis-frontend.md  readme-analysis-screenshots.md  readme-analysis-startup.md  readme-update-notes.md
native/scriber-codec-lab/: Cargo.toml  README.md  build.rs  toolchains.json
native/scriber-codec-lab/scripts/: run_challenger_matrix.py  run_counterbalanced.py  run_matrix.py
native/scriber-codec-lab/src/: main.rs
native/scriber-codec-lab/tests/: test_run_matrix.py
native/scriber-diarization-sidecar/: Cargo.toml  README.md  build.rs
native/scriber-diarization-sidecar/src/: lib.rs  main.rs
native/scriber-lossy-codec-lab/: .gitattributes  .gitignore  Cargo.toml  README.md  build.rs  toolchains.json
native/scriber-lossy-codec-lab/scripts/: lab_common.py  run_counterbalanced.py  run_matrix.py
native/scriber-lossy-codec-lab/src/: main.rs
native/scriber-lossy-codec-lab/tests/: test_lab_common.py
native/scriber-quickjs-wrapper/: Cargo.toml
native/scriber-quickjs-wrapper/src/: lib.rs  main.rs
packaging/: backend-sidecar-output-contract.json  desktop-rust-incremental-cache-contract.json  installer-component-map-v1.json  nltk-punkt-tab-lock-v1.json  quickjs-youtube-runtime-lock-v1.json  scriber-backend.spec  tauri-app-binary-output-contract.json  tauri-cli-cache-contract.json
pyloudnorm/: __init__.py  meter.py  normalize.py  util.py
scripts/: .scratch-soniox-download.md  __init__.py  analyze_backend_runtime_dependencies.py  build_denort_youtube_runtime.py  build_quickjs_youtube_runtime.py  build_smart_turn_mel_matmul_model.py  build_tauri_backend_sidecar.ps1  build_tauri_text_injection_matrix.py  build_windows.ps1  check_backend_runtime_imports.py  check_hot_path_budget.py  check_transcript_buffer_growth.py  collect_meeting_regression_evidence.py  collect_meeting_support_bundle_evidence.py  create_release_metadata.py  create_release_size_report.py  generate_meeting_tts_fixture.py  generate_tray_state_icons.py  generate_windows_app_icon.py  installer_research.py  measure_history_scroll_baseline.py  measure_hybrid_baseline.ps1  measure_installer_research.ps1  measure_recording_hot_path_baseline.py  measure_upload_export_baseline.py  measure_ws_broadcast_baseline.py  new_meeting_release_evidence.py  prepare_gyan_ffmpeg_essentials.ps1  prepare_installer_research_environment.ps1  prepare_installer_research_toolchain.ps1  prepare_nltk_punkt_data.py  prepare_tauri_updater_config.py  probe_meeting_release_readiness.ps1  process_utils.py  project-python.cmd  prune_local_dev_workspace.ps1  run_hybrid_release_readiness.ps1  run_installer_size_packet.ps1  run_meeting_release_matrix.ps1  run_microphone_hardware_matrix.ps1  (+33 more)
src/: assemblyai_async_stt.py  audio_devices.py  audio_file_input.py  audio_prepare.py  azure_mai_stt.py  backend_worker.py  cloud_async_stt.py  config.py  database.py  device_monitor.py  export.py  gemini_transcribe.py  gladia_stt.py  injector.py  log_viewer.py  main.py  meeting_analysis.py  meeting_capture.py  meeting_export.py  meeting_finalizer.py  meeting_live_stt.py  meeting_participant_matching.py  mic_prewarm.py  (+28 more)
(+464 files in other folders)
