[package]
name = "scriber-desktop"
version = "0.1.0"
description = "Scriber desktop shell"
authors = ["Scriber"]
edition = "2021"

[lib]
name = "scriber_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "scriber-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.5.2", features = [] }

[dependencies]
tauri = { version = "2.9.5", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-opener = "2.5.0"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_JobObjects",
  "Win32_System_Registry",
  "Win32_System_Threading",
] }
