[package]
name = "scriber-desktop"
version = "0.1.0"
description = "Scriber desktop shell"
authors = ["Scriber"]
edition = "2021"

[lib]
name = "scriber_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "scriber-desktop"
path = "src/main.rs"

[[bin]]
name = "scriber-audio-sidecar"
path = "src/audio_sidecar.rs"

[build-dependencies]
tauri-build = { version = "2.5.2", features = [] }

[dependencies]
tauri = { version = "2.9.5", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.3", features = [
  "Win32_Devices_Properties",
  "Win32_Foundation",
  "Win32_Media_Audio",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_Variant",
  "Win32_UI_Shell_PropertiesSystem",
] }
windows-core = "0.61.2"
windows-sys = { version = "0.61.2", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Storage_FileSystem",
  "Win32_System_DataExchange",
  "Win32_System_IO",
  "Win32_System_JobObjects",
  "Win32_System_Memory",
  "Win32_System_Ole",
  "Win32_System_Pipes",
  "Win32_System_Registry",
  "Win32_System_Threading",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
] }
