[package]
name = "scriber-diarization-sidecar"
version = "0.1.0"
description = "Isolated optional Sherpa-ONNX speaker diarization worker for Scriber"
authors = ["Scriber"]
edition = "2021"
license = "MIT"
publish = false

[dependencies]
hound = "3.5.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sherpa-onnx = { version = "=1.13.3", default-features = false, features = ["static"] }
# The 1.13.3 safe wrapper declares this transitively with a caret requirement.
# Pin the native ABI as well so Cargo cannot combine it with a newer archive.
sherpa-onnx-sys = { version = "=1.13.3", default-features = false, features = ["static"] }

[target.'cfg(windows)'.dependencies]
libc = "=0.2.186"
windows-sys = { version = "0.61.2", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_JobObjects",
  "Win32_System_Threading",
] }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
