[package]
name = "scriber-quickjs-wrapper"
version = "0.1.0"
description = "Bounded QuickJS protocol wrapper for Scriber YouTube EJS"
authors = ["Scriber"]
edition = "2021"
license = "MIT"
publish = false

[dependencies]
serde_json = "1"
sha2 = "0.10"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_JobObjects",
  "Win32_System_Threading",
] }

[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
